# TechnicalIndicatorFetcher

./: CLAUDE.md  README.md  pyproject.toml  sample_run.py  sample_run_yfinance.py
technical_indicator_fetcher/: __init__.py  config.py  derived.py  exceptions.py  indicators.py  market_data.py  models.py  patterns.py  preprocess.py  serializer.py  service.py  validator.py
tests/: data_builders.py  test_derived.py  test_indicators.py  test_market_data.py  test_patterns.py  test_preprocess.py  test_real_data_integration.py  test_serializer.py  test_service.py  test_validator.py
