[project]
name = "technical-indicator-fetcher"
version = "0.1.0"
description = "Technical indicator fetcher foundations"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2,<3",
    "pandas>=2.2,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

